--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
   command = "npm i --force && npm run build"
-  publish = "dist" # O la carpeta donde se genera el build (ej. "out" para Next.js)
+  publish = ".next" # O la carpeta donde se genera el build (ej. "out" para Next.js)
